# plotlyMol

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  launch_app.bat  launch_app.command  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  publish.yml  security.yml  test.yml
docs/: about.md  contributing.md  index.md  installation.md  quickstart.md
docs/assets/: dash-example.webm  demo.webm
docs/examples/: index.md
docs/stylesheets/: extra.css
docs/tutorials/: index.md
examples/: gui_app.py  render_demo_webm.py
src/plotlymol3d/: __init__.py  app.py  plotlyMol3D.py  vibrations.py
tests/: test_performance.py  test_visualization.py
